package it.unipv.posw.careconnectpro.model.cartellaclinica.monitoraggio;

public enum Alert {
	
	ATTIVO, INATTIVO, RISOLTO

}
