package it.unipv.posw.careconnectpro.model.cartellaclinica.monitoraggio;

public enum TipiParametroVitale {
	
    FREQUENZA_CARDIACA, PRESSIONE_ARTERIOSA, SATURAZIONE, TEMPERATURA
    
}
